# dde-cooperation

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  clean_build.bat  prepare_dependencies.bat
src/: CMakeLists.txt  cooperation-transfer-translate.sh  data-transfer-translate.sh
src/apps/data-transfer/: CMakeLists.txt  main.cpp
src/apps/dde-cooperation/: CMakeLists.txt  main.cpp
src/apps/dde-cooperation-transfer/: CMakeLists.txt  main.cpp
src/apps/launcher/: CMakeLists.txt
src/base/: baseutils.cpp
src/base/reportlog/: reportlogmanager.cpp  reportlogworker.cpp
src/base/reportlog/datas/: cooperationreportdata.cpp
src/common/: commonutils.cpp  commonutils.h  debugdialog.cpp  debugdialog.h  logger.cpp  logger.h
src/compat/: CMakeLists.txt
src/compat/apps/daemon/: CMakeLists.txt  main.cpp
src/compat/protocol/: update_proto.sh
src/compat/zrpc/: CMakeLists.txt
src/compat/zrpc/sample/: CMakeLists.txt  client.cpp  server.cpp
src/configs/json/: org_deepin_dde_cooperation.hpp
src/configs/settings/: configmanager.cpp  settings.cpp
src/infrastructure/: CMakeLists.txt  android-uuid.cmake  asio.cmake  slotipc.cmake
src/infrastructure/basekit/: CMakeLists.txt  fmt.cmake
src/infrastructure/basekit/tests/: CMakeLists.txt  string_test.cpp
src/infrastructure/fmt/: CMakeLists.txt
src/infrastructure/fmt/examples/: CMakeLists.txt  basic.cpp  custom_type.cpp
src/infrastructure/fmt/include/: core.h  fmt.h  fmt_utils.h
src/infrastructure/fmt/src/: core.cpp  fmt.cpp  fmt_utils.cpp  format.cpp
src/infrastructure/fmt/test/: CMakeLists.txt  fmt_test.cpp  utils_test.cpp
src/infrastructure/logging/: CMakeLists.txt
src/infrastructure/logging/tests/: CMakeLists.txt  appender_test.cpp  config_test.cpp  filter_test.cpp  layout_test.cpp  level_test.cpp  logger_test.cpp  processor_test.cpp  record_test.cpp  trigger_test.cpp  version_test.cpp
src/infrastructure/logging/zlib/: zlib.lib
src/infrastructure/netutil/: CMakeLists.txt
src/infrastructure/netutil/tests/: CMakeLists.txt  main.cpp
src/infrastructure/slotipc/: CMakeLists.txt
src/infrastructure/slotipc/src/: interface.cpp  interface_p.h  interfaceconnection.cpp  interfaceconnection_p.h  interfaceworker.cpp  interfaceworker.h  marshaller.cpp  marshaller_p.h  message.cpp  message_p.h  service.cpp  service_p.h  serviceconnection.cpp  serviceconnection_p.h  signalhandler.cpp  signalhandler_p.h
src/infrastructure/slotipc/test/: CMakeLists.txt  interface_test.cpp  interfaceconnection_test.cpp  interfaceworker_test.cpp  marshaller_test.cpp  message_test.cpp  service_test.cpp  serviceconnection_test.cpp  signalhandler_test.cpp
src/infrastructure/sslconf/: CMakeLists.txt
src/infrastructure/sslconf/include/: sslcertconf.h
src/infrastructure/sslconf/src/: common.h  confstring.cpp  confstring.h  datadirectories.h  datadirectoriesstatic.cpp  filesystem.cpp  filesystem.h  finally.h  fingerprintdata.cpp  fingerprintdata.h  fingerprintdatabase.cpp  fingerprintdatabase.h  secureutils.cpp  secureutils.h  sslcertconf.cpp
src/infrastructure/uasio/: CMakeLists.txt  README.md
src/infrastructure/uasio/cmake/: uasio-config.cmake.in
src/infrastructure/uasio/examples/: CMakeLists.txt  cancellation_example.cpp  connection_pool_example.cpp  datagram_socket_example.cpp  file_example.cpp  future_promise_example.cpp  https_client_example.cpp  https_server_example.cpp  ipv4_example.cpp  ipv6_example.cpp  multiple_exceptions_example.cpp  reliable_udp_example.cpp  resolver_example.cpp  signal_set_example.cpp  socket_example.cpp  ssl_example.cpp  steady_timer_example.cpp  strand_example.cpp  streambuf_example.cpp  system_context_example.cpp  thread_pool_example.cpp  timer_example.cpp  timer_example2.cpp  wait_group_example.cpp
src/infrastructure/uasio/src/: asio.cpp  asio.h  buffer.h  cancellation_signal.cpp  cancellation_signal.h  connection_pool.h  datagram_socket.cpp  datagram_socket.h  error.cpp  error.h  error_category.h  execution_context.cpp  execution_context.h  executor.h  file.cpp  file.h  future.h  io_context.cpp  io_context.h  linux_epoll.cpp  multiple_exceptions.cpp  multiple_exceptions.h  packaged_task.h  promise.h  resolver.cpp  resolver.h  serial_port.cpp  serial_port.h  signal_set.h  socket.cpp  socket.h  socket_service.cpp  socket_service.h  ssl.h  steady_timer.cpp  steady_timer.h  strand.h  streambuf.cpp  streambuf.h  system_context.cpp  (+7 more)
src/infrastructure/uasio/test/: CMakeLists.txt  basic_datagram_test.cpp  test_buffer.cpp  test_datagram_socket.cpp  test_signal_set.cpp  test_steady_timer.cpp  test_strand.cpp  test_streambuf.cpp  test_streambuf_only.cpp
src/infrastructure/zrpc/: CMakeLists.txt
src/infrastructure/zrpc/include/: netaddress.h  rpcchannel.h  rpcdispatcher.h  zrpc.h  zrpc_log.h
src/infrastructure/zrpc/sample/: CMakeLists.txt  client.cpp  server.cpp
src/infrastructure/zrpc/src/: zrpc.cpp
src/lib/common/: CMakeLists.txt
src/lib/common/httpweb/: CMakeLists.txt  fileclient.cpp  fileclient.h  fileserver.cpp  fileserver.h  tokencache.h  webbinder.h
src/lib/common/manager/: CMakeLists.txt  filesizecounter.cpp  secureconfig.cpp  secureconfig.h  sessionmanager.cpp  sessionmanager.h  sessionproto.h  sessionworker.cpp  sessionworker.h  transferworker.cpp
src/lib/common/proto/: CMakeLists.txt  fbe.cpp  fbe.h  message.fbe
src/lib/common/session/: CMakeLists.txt  asioservice.h  protoclient.cpp  protoclient.h  protoendpoint.cpp  protoendpoint.h  protoserver.cpp  protoserver.h
src/lib/cooperation/: CMakeLists.txt
src/lib/cooperation/core/: CMakeLists.txt  cooperationcoreplugin.cpp
src/lib/cooperation/dfmplugin/: CMakeLists.txt  cooperationplugin.cpp
src/lib/cooperation/transfer/: CMakeLists.txt  transferplugin.cpp
src/lib/data-transfer/: CMakeLists.txt
src/lib/data-transfer/core/: CMakeLists.txt  datatransfercoreplugin.cpp
src/lib/data-transfer/quazip/: CMakeLists.txt  compressutil.cpp  compressutil.h  crypt.h  exportdefine.h  ioapi.h  qioapi.cpp  quaadler32.cpp  quaadler32.h  quachecksum32.h  (+18 more)
src/singleton/: commandparser.cpp  singleapplication.cpp  singleapplication.h
(+961 files in other folders)
